# autoquiz

./: .env.example  .pylint.ini  .pytest.ini  LICENSE.md  Makefile  README.md  pyproject.toml
autoquiz/generators/: __init__.py  topic_generator.py
autoquiz/prompts/: __init__.py  topic_generator_prompts.py
autoquiz/utils/: __init__.py  openai_llm.py
tests/generators/: test_topic_generator.py
