[tool.poetry]
name = "autoquiz"
version = "0.1.0"
description = ""
authors = ["Bas Wenneker <bas@headingfwd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.13"
pytest = "^8.1.1"
langchain-openai = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
